--- a/davidpaste/templates/paste_view.html
+++ b/davidpaste/templates/paste_view.html
@@ -2,6 +2,6 @@
 {% block title %}{{ paste.title }} - 查看代码{% endblock %}
 {% block content %}
 	<p><label>标题</label><span>{{ paste.title }}</span><label>语法</label><span>{{ paste.syntax.name }}</span></p>
-	<p><label>标签</label>{% for tag in paste.tags %}<a href="{{ tag.get_url() }}">{{ tag.name }}</a>{% endfor %}</p>
+	<p><label>标签</label>{% for tag in paste.tags %}<span class="tag"><a href="{{ tag.get_url() }}">{{ tag.name }}</a></span>{% endfor %}</p>
 	<div id="code">{{ paste.content | highlight(paste.syntax.syntax) }}</div>
 {% endblock %}
