--- a/templates/base.html
+++ b/templates/base.html
@@ -21,8 +21,8 @@
                     <li><a href="/user/manage/">管理</a></li>
                     <li><a href="{{ url_for('logout') }}">登出</a></li>
                 {% else %}
-                    <li><a href="{{ url_for('register') }}">注册</a></li>
-                    <li><a href="{{ url_for('login') }}">登入</a></li>
+                    <li><a href="{{ url_for('app.register') }}">注册</a></li>
+                    <li><a href="{{ url_for('app.login') }}">登入</a></li>
                 {% endif %}
             </ul>
         </div>
