--- a/templates/base.html
+++ b/templates/base.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/960.css" />
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/buttons.css">
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/themes/colourful.css">
         <script src="/static/js/jquery-1.6.2.min.js" type="text/javascript"></script>
         <script src="/static/js/davidpaste.js" type="text/javascript"></script>
     </head>
