--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,9 @@
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/buttons.css">
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/styles.css">
         <link rel="stylesheet" type="text/css" media="screen" href="/static/css/themes/colourful.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/uniform.default.css">
         <script src="/static/js/jquery-1.6.2.min.js" type="text/javascript"></script>
+        <script src="/static/js/jquery.uniform.min.js" type="text/javascript"></script>
         <script src="/static/js/davidpaste.js" type="text/javascript"></script>
     </head>
     <body>
