--- a/templates/base.html
+++ b/templates/base.html
@@ -6,10 +6,10 @@
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/reset.css" />
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/text.css" />
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/960.css" />
-        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/buttons.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/styles.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/themes/colourful.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/uniform.default.css">
+        <link rel="stylesheet" type="text/css" media="all" href="/static/css/buttons.css">
+        <link rel="stylesheet" type="text/css" media="all" href="/static/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="all" href="/static/css/themes/monokai.css">
+        <!--<link rel="stylesheet" type="text/css" media="screen" href="/static/css/uniform.default.css">-->
         <script src="/static/js/jquery-1.6.2.min.js" type="text/javascript"></script>
         <script src="/static/js/jquery.uniform.min.js" type="text/javascript"></script>
         <script src="/static/js/davidpaste.js" type="text/javascript"></script>
