change sidebar css

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -97,6 +97,12 @@ div#top ul li {
 	float:right;
 }
 
+/** side bar **/
+#sidebar {
+	margin-left: 40px;
+    padding-top: 30px;
+}
+
 /** content **/
 #container {
     border: 2px solid #AAAAAA;
