--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="top" class="container_12">
-			<h1 class="grid_2 alpha" id="website_logo"><a href="/">DAVIDPASTE</a></h1>
+			<h1 class="grid_2 alpha" id="website_logo"><a href="/">DAVIDPASTE</a></h1><span>Ver 0.3</span>
 			<!--<ul class="grid_4 omega" id="website_menu">
                 <li><a href="{{ url_for('tagapp.list') }}">标签</a></li>
                 {% if session['user'] %}
