--- a/templates/pasteapp/create.html
+++ b/templates/pasteapp/create.html
@@ -8,14 +8,14 @@
 <div id="paste_new">
 	<h2>粘贴新代码</h2>
 	{% if form.errors %}
-    {{ form.errors }}
+	<p class="errors">嗨, buddy, 你忘了贴代码, 或者填验证码了吧?</p>
 	{% endif %}
 	<form class="form" action="{{ url_for('pasteapp.create') }}" method="POST">
 		<p><label>{{ form.title.label }}</label>{{ form.title }}</p>
 		<p><label>{{ form.syntax.label }}</label>{{ form.syntax }}</p>
 		<p><label>{{ form.tag.label }}</label>{{ form.tag }}</p>
 		<p>{{ form.content }}</p>
-        <p><label>{{ form.captcha.label }}</label>{{ form.captcha }}<img src="/captcha/?t={{ t }}" /></p>
+        <p><label>{{ form.captcha.label }}</label>{{ form.captcha }}<img src="/captcha?t={{ t }}" style="position: absolute;margin-left: 10px;" /></p>
         <p><label></label><input type="submit" class="submit button" value="发表" /></p>
 	</form>
 	<br />
