add tag view page, and about page

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,7 @@
             <div id="sidebar" class="grid_2">{% block sidebar %}{% include 'ads.html' %}{% endblock %}</div>
         </div>
 		<div id="footer" class="container_12">
-			<p class="flink"><a href="/about/">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>copyright <a href="/">davidpaste.com</a> 2011</span></p>
+			<p class="flink"><a href="/about">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>copyright <a href="/">davidpaste.com</a> 2011</span></p>
 		</div>
     </body>
 </html>
