modify about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,9 +6,9 @@
     <ul>
         <li>Ver 0.3功能
         <ol>
-            <li>使用flask重写</li>
-            <li>使用pygments做代码高亮</li>
-            <li>标签功能</li>
+            <li><del>使用flask重写</del></li>
+            <li><del>使用pygments做代码高亮</del></li>
+            <li><del>标签功能</del></li>
             <li>收藏功能</li>
         </ol>
         </li>
