--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,8 @@
             <div id="wrapper" class="grid_9">{% block content %}{% endblock %}</div>
             <div id="sidebar" class="grid_2">{% block sidebar %}{% include 'ads.html' %}{% endblock %}</div>
         </div>
-		<div id="footer" class="container_12">
-			<p class="flink"><a href="/about">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>copyright <a href="/">davidpaste.com</a> 2011</span></p>
+		<div id="footer">
+			<p class="flink container_12"><a href="/about">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>© 2011 <a href="/">davidpaste.com</a> All right reserved.</span></p>
 		</div>
     </body>
 </html>
