--- a/templates/pasteapp/view.html
+++ b/templates/pasteapp/view.html
@@ -2,8 +2,8 @@
 {% block title %}{{ model.title }}{% endblock %}
 {% block content %}
 <div id="paste_view">
-    <h1>{{ model.title }}</h1>
-    <h3>{% for tag in model.tags %}<a href="/tag/{{ tag.name }}">{{ tag.name }}</a>{% endfor %}</h3>
+	<h1>{{ model.title }}<span>{{ model.created_time | dateformat }}</span></h1>
+    <h3>tags: {% for tag in model.tags %}<a href="/tag/{{ tag.name }}">{{ tag.name }}</a>{% endfor %}</h3>
     <div id="code_view">{{ code | safe }}</div>
 </div>
 {% endblock %}
