change color of 'ver 0.3'

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -70,6 +70,8 @@ div#top span {
 	float: left;
     margin-left: 135px;
     margin-top: 33px;
+	color: white;
+    font-weight: bold;
 }
 div#top ul {
     float:right;
