add some content to about

--- a/templates/about.html
+++ b/templates/about.html
@@ -2,7 +2,9 @@
 {% block title %}关于大卫粘贴{% endblock %}
 {% block content %}
 <div id="about">
-    <p>大卫粘贴是一个什么样的网站呢? 我很难用一句话来形容.</p>
+    <p>大卫粘贴是一个什么样的网站呢? 我很难用一句话来形容.大家用的多了, 自然就明白了.</p>
+	<p>它不会是一个简单的代码粘贴, 它会让大家培养出良好的分享代码的习惯, 让分享代码, 也能成为一种乐趣.</p>
+	<h3>Change Log:</h3>
     <ul>
         <li>Ver 0.3功能
         <ol>
@@ -21,5 +23,8 @@
         </ol>
         </li>
     </ul>
+	<br />
+	<p>如果你有什么好的建议或者想法, 或者觉得大卫粘贴有什么不好的地方, 欢迎直接给我发邮件. 我的邮箱是mykingheaven#gmail.com和david.xie#me.com, 2个都可以.</p>
+	<p>P.S. 招一个志同道合的人一起开发大卫粘贴, 没有薪水</p>
 </div>
 {% endblock %}
