modify about page

--- a/templates/about.html
+++ b/templates/about.html
@@ -25,6 +25,6 @@
     </ul>
 	<br />
 	<p>如果你有什么好的建议或者想法, 或者觉得大卫粘贴有什么不好的地方, 欢迎直接给我发邮件. 我的邮箱是mykingheaven#gmail.com和david.xie#me.com, 2个都可以.</p>
-	<p>P.S. 招一个志同道合的人一起开发大卫粘贴, 没有薪水</p>
+	<p style="color:red">P.S. 招一个志同道合的人一起开发大卫粘贴, 没有薪水, 只为共同的目标</p>
 </div>
 {% endblock %}
