--- a/templates/userapp/register.html
+++ b/templates/userapp/register.html
@@ -2,12 +2,16 @@
 {% block title %}注册新用户{% endblock %}
 {% block content %}
 <div id="register">
+	<h1>注册新用户</h1>
+	{% if form.errors %}
+	<p class="errors">嗨, buddy, 有数据写错了. 检查下email地址, 昵称(3-12个字符), 密码(6-12个字符), 还有, 别忘了写验证码哦.</p>
+	{% endif %}
     <form class="form" action="{{ url_for('userapp.register') }}" method="POST">
         <p><label>{{ form.email.label }}</label>{{ form.email }}</p>
         <p><label>{{ form.nickname.label }}</label>{{ form.nickname }}</p>
         <p><label>{{ form.password.label }}</label>{{ form.password }}</p>
         <p><label>{{ form.password_confirm.label }}</label>{{ form.password_confirm }}</p>
-        <p><label>{{ form.captcha.label }}</label>{{ form.captcha }}<img src="/captcha?t={{ t }}" style="position: absolute;margin-left: 10px;" /></p>
+        <p><label>{{ form.captcha.label }}</label>{{ form.captcha }}<img src="/captcha" style="position: absolute;margin-left: 10px;" /></p>
         <p><label></label><input type="submit" class="submit button" value="注册" /></p>
     </form>
 </div>
