--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,8 @@
     <body>
         <div id="top" class="container_12">
 			<h1 class="grid_2 alpha" id="website_logo"><a href="/">DAVIDPASTE</a></h1><span>Ver 0.3</span>
-			<ul class="grid_3 omega" id="website_menu">
+			<ul class="grid_4 omega" id="website_menu">
+                <li><a href="{{ url_for('rankapp.rank') }}">排行榜</a></li>
                 <li><a href="{{ url_for('tagapp.list') }}">标签</a></li>
                 {% if session['user'] %}
                 <li>{{ session['user']['nickname'] }}</li>
