--- a/templates/pasteapp/view.html
+++ b/templates/pasteapp/view.html
@@ -5,6 +5,27 @@
     <h1>{{ model.title }}<span>{{ model.created_time | dateformat }}</span></h1>
     <h3>tags: {% for tag in model.tags %}<a href="/tag/{{ tag.name }}">{{ tag.name }}</a>{% endfor %}</h3>
     <h4><a href="{{ url_for('pasteapp.view', paste_id=model.id) }}?output=image&attachment=true">保存成png图片</a></h4>
+    <h4><script type="text/javascript" charset="utf-8">
+(function(){
+  var _w = 106 , _h = 24;
+  var param = {
+    url:location.href,
+    type:'5',
+    count:'', /**是否显示分享数，1显示(可选)*/
+    appkey:'', /**您申请的应用appkey,显示分享来源(可选)*/
+    title:'我在大卫粘贴<davidpaste.com>分享了代码, 来看看吧', /**分享的文字内容(可选，默认为所在页面的title)*/
+    pic:'', /**分享图片的路径(可选)*/
+    ralateUid:'', /**关联用户的UID，分享微博会@该用户(可选)*/
+	language:'zh_cn', /**设置语言，zh_cn|zh_tw(可选)*/
+    rnd:new Date().valueOf()
+  }
+  var temp = [];
+  for( var p in param ){
+    temp.push(p + '=' + encodeURIComponent( param[p] || '' ) )
+  }
+  document.write('<iframe allowTransparency="true" frameborder="0" scrolling="no" src="http://hits.sinajs.cn/A1/weiboshare.html?' + temp.join('&') + '" width="'+ _w+'" height="'+_h+'"></iframe>')
+})()
+</script></h4>
     <div id="code_view">{{ code | safe }}</div>
 </div>
 {% endblock %}
