--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -248,9 +248,10 @@ div.rank h2 {
     font-size:18px;
     border-bottom:1px dashed #ccc;
     padding-bottom:5px;
+    margin-bottom:10px;
 }
 div.rank ul li {
-    margin-top:10px;
+    margin-bottom:10px;
     font-size:16px;
 }
 div.rank ul li a {
