--- a/templates/base.html
+++ b/templates/base.html
@@ -3,21 +3,17 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
         <title>{% block title %}{% endblock %} - DavidPaste.com</title>
-        <link rel="stylesheet" type="text/css" media="all" href="/static/css/reset.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="/static/css/text.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="/static/css/960.css" />
-        <link rel="stylesheet" type="text/css" media="all" href="/static/css/buttons.css">
-        <link rel="stylesheet" type="text/css" media="all" href="/static/css/styles.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/bootstrap.min.css">
+        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/styles.css">
         <link rel="stylesheet" type="text/css" media="all" href="/static/css/themes/monokai.css">
-        <link rel="stylesheet" type="text/css" media="screen" href="/static/css/uniform.default.css">
         <script src="/static/js/jquery-1.6.2.min.js" type="text/javascript"></script>
-        <script src="/static/js/jquery.uniform.min.js" type="text/javascript"></script>
         <script src="/static/js/davidpaste.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="top" class="container_12">
-			<h1 class="grid_2 alpha" id="website_logo"><a href="/">DAVIDPASTE</a></h1><span>Ver 0.3</span>
-			<ul class="grid_4 omega" id="website_menu">
+        <div id="top" class="container">
+			<h1 class="span3" id="website_logo"><a href="/">DAVIDPASTE</a></h1>
+            <span>Ver 0.3</span>
+			<ul class="span4" id="website_menu">
                 <li><a href="{{ url_for('rankapp.rank') }}">排行榜</a></li>
                 <li><a href="{{ url_for('tagapp.list') }}">标签</a></li>
                 {% if session['user'] %}
@@ -29,12 +25,12 @@
                 {% endif %}
 			</ul>
         </div>
-        <div id="container" class="container_12">
-            <div id="wrapper" class="grid_9">{% block content %}{% endblock %}</div>
-            <div id="sidebar" class="grid_2">{% block sidebar %}{% include 'ads.html' %}{% endblock %}</div>
+        <div id="container" class="container">
+            <div id="wrapper" class="span12">{% block content %}{% endblock %}</div>
+            <div id="sidebar" class="span4">{% block sidebar %}{% include 'ads.html' %}{% endblock %}</div>
         </div>
 		<div id="footer">
-			<p class="flink container_12"><a href="/about">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>© 2011 <a href="/">davidpaste.com</a> All right reserved.</span></p>
+			<p class="flink container"><a href="/about">关于</a> <a href="mailto:mykingheaven@gmail.com">联系我</a><span>© 2011 <a href="/">davidpaste.com</a> All right reserved.</span></p>
 		</div>
     </body>
 </html>
