--- a/templates/pasteapp/create.html
+++ b/templates/pasteapp/create.html
@@ -11,12 +11,15 @@
 	<p class="errors">嗨, buddy, 你忘了贴代码, 或者填验证码了吧?</p>
 	{% endif %}
 	<form class="form" action="{{ url_for('pasteapp.create') }}" method="POST">
-		<p><label>{{ form.title.label }}</label>{{ form.title }}<span>可以不填</span></p>
-		<p><label>{{ form.syntax.label }}</label>{{ form.syntax }}</p>
-		<p><label>{{ form.tag.label }}</label>{{ form.tag }}<span>多个标签用空格区分</span></p>
+		<p>{{ form.title.label(class="span2") }}{{ form.title(class="span8") }}</p>
+		<p><label class="span2"></label><span class="help-block">可以不填</span></p>
+		<p>{{ form.syntax.label(class="span2") }}{{ form.syntax(class="span8") }}</p>
+		<p>{{ form.tag.label(class="span2") }}{{ form.tag(class="span8") }}</p>
+		<p><label class="span2"></label><span class="help-block">多个标签用空格区分</span></p>
 		<p>{{ form.content }}</p>
-        <p><label>{{ form.captcha.label }}</label>{{ form.captcha }}<img src="/captcha?t={{ t }}" style="position: absolute;margin-left: 10px;" /><span>不区分大小写</span></p>
-        <p><label></label><input type="submit" class="submit button" value="发表" /></p>
+        <p>{{ form.captcha.label(class="span2") }}{{ form.captcha(class="span2") }}<img src="/captcha?t={{ t }}" style="position: absolute;margin-left: 10px;" /></p>
+        <p><label class="span2"></label><span class="help-block">不区分大小写</span></p>
+        <p><label class="span2"></label><input type="submit" class="btn primary" value="发表" /></p>
 	</form>
 	<br />
 </div>
