--- a/templates/pasteapp/view.html
+++ b/templates/pasteapp/view.html
@@ -11,12 +11,12 @@
   var param = {
     url:location.href,
     type:'5',
-    count:'', /**是否显示分享数，1显示(可选)*/
-    appkey:'', /**您申请的应用appkey,显示分享来源(可选)*/
-    title:'我在大卫粘贴<davidpaste.com>分享了代码, 来看看吧', /**分享的文字内容(可选，默认为所在页面的title)*/
-    pic:'', /**分享图片的路径(可选)*/
-    ralateUid:'', /**关联用户的UID，分享微博会@该用户(可选)*/
-	language:'zh_cn', /**设置语言，zh_cn|zh_tw(可选)*/
+    count:'',
+    appkey:'',
+    title:'我在大卫粘贴<davidpaste.com>分享了代码, 来看看吧',
+    pic:'',
+    ralateUid:'',
+	language:'zh_cn',
     rnd:new Date().valueOf()
   }
   var temp = [];
